--- a/css/style-ar.css
+++ b/css/style-ar.css
@@ -17,6 +17,10 @@
     color: white;
 
 }
+.buttons button{
+        
+        margin-left: 10px;
+    }
 .mainjombo h4,.mainjombo p{
     font-size: .8em;
 }
@@ -112,11 +116,78 @@
     line-height: 1em;
     font-size: 1em;
 }
+.footerf{
+    margin-left: 600px;
+}
 .btnBlue{
     margin-top: 72px;
 }
 @media (max-width:1000px){
-    .btnBlue{
-        margin-top: 108px;
+       .btnBlue{
+        margin-top: 160px;
     }
+    .mainjombo h2{
+        font-size: 3em;
+        padding: 8px;
+    }
+    .mainjombo p{
+        font-size: 1.8em;
+        padding: 8px;
+    }
+    .buttons button{
+        display: block;
+        text-align: center;
+        width: 500px;
+        font-size: 1.8em;
+        margin: 20px;
+        margin-bottom: 40px;
+        margin-left: 200px;
+    }
+    .images{
+        display: none;
+        margin-bottom: 40px;
+    }
+    .Image1{
+        font-size: 1.8em;
+        line-height: 1.2em;
+    }
+     .Image2{
+        font-size: 1.8em;
+         line-height: 1.2em;
+         color: cornflowerblue;
+    }
+    .Image3{
+        font-size: 1.8em;
+         line-height: 1.2em;
+    }
+    .Elite{
+        font-size: 1.4em;
+         line-height: 1.2em;
+    }
+    .col1{
+        display: none;
+    }
+    .col2{
+        display: none;
+    }
+    .col3 h5{
+        font-size: 1.6em;
+    }
+    .col3 {
+        font-size: 1.4em;
+        margin-left: 150px;
+
+    }
+    .footerf{
+        
+        display: none;
+        
+    }
+    .footerf ul li a{
+        display: inline-block;
+    }
+    .footerc{
+        margin-left: 250px;
+    }
+    
 }
