--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
     color: white;
 
 }
+  .buttons button{
+        
+        margin-left: 10px;
+    }
 .mainjombo h4,.mainjombo p{
     font-size: .8em;
 }
@@ -109,8 +113,69 @@
 .btnBlue{
     margin-top: 72px;
 }
-@media (max-width:1000px){
+@media (max-width:1024px){
     .btnBlue{
-        margin-top: 66px;
+        margin-top: 100px;
     }
+    .mainjombo h2{
+        font-size: 3em;
+        padding: 8px;
+    }
+    .mainjombo p{
+        font-size: 1.8em;
+        padding: 8px;
+    }
+    .buttons button{
+        display: block;
+        text-align: center;
+        width: 500px;
+        font-size: 1.8em;
+        margin: 20px;
+        margin-bottom: 40px;
+        margin-left: 180px;
+    }
+    .images{
+        display: none;
+        margin-bottom: 40px;
+    }
+    .Image1{
+        font-size: 1.8em;
+        line-height: 1.2em;
+    }
+     .Image2{
+        font-size: 1.8em;
+         line-height: 1.2em;
+         color: cornflowerblue;
+    }
+    .Image3{
+        font-size: 1.8em;
+         line-height: 1.2em;
+    }
+    .Elite{
+        font-size: 1.4em;
+         line-height: 1.2em;
+    }
+    .col1{
+        display: none;
+    }
+    .col2{
+        display: none;
+    }
+    .col3 h5{
+        font-size: 1.6em;
+    }
+    .col3 {
+        font-size: 1.4em;
+        margin-left: 150px;
+
+    }
+    .footerf{
+        font-size: 1.6em;
+        padding-left: 150px;
+    }
+    .footerc{
+        display: none;
+    }
+    
+    
 }
